--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://junhyungBYUN.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
-author: junhyung BYUN # add your name
+author: BYUN's blog # add your name
 author-pic: adam-face.jpg
 about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
 
