--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ url: "https://junhyungBYUN.github.io" # the base hostname & protocol for your si
 
 # Author settings
 author: BYUN's blog # add your name
-author-pic: adam-face.jpg
-about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
+author-pic: .jpg
+about-author: My name is junhyung BYUN.
 
 # Contact links
 email: # Add your Email address
