--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My personal blog - BYUN
+title: BYUN's Blog
 email: junhyung.datascience@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
