--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ author-pic: .jpg
 about-author: My name is junhyung BYUN.
 
 # Contact links
-email: # Add your Email address
+email: junhyung.datascience@gmail.com # Add your Email address
 phone: # Add your Phone number
-website: # Add your website, do not add http://
+website: https://junhyungBYUN.github.io # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
-github: artemsheludko # Add your Github handle
-twitter: '@artemsheludko_' # Add your Twitter handle
+github: https://github.com/junhyungBYUN # Add your Github handle
+twitter: # Add your Twitter handle
 facebook: # Add your Facebook handle
 instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
