--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: junhyung.datascience@gmail.com # Add your Email address
 phone: # Add your Phone number
 website: https://junhyungBYUN.github.io # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
-github: https://github.com/junhyungBYUN # Add your Github handle
+github: junhyungBYUN # Add your Github handle
 twitter: # Add your Twitter handle
 facebook: # Add your Facebook handle
 instagram: # Add your Instagram handle
