--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ about-author: My name is junhyung BYUN.
 # Contact links
 email: junhyung.datascience@gmail.com # Add your Email address
 phone: # Add your Phone number
-website: https://junhyungBYUN.github.io # Add your website, do not add http://
+website: junhyungBYUN.github.io # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 github: junhyungBYUN # Add your Github handle
 twitter: # Add your Twitter handle
