--- a/_config.yml
+++ b/_config.yml
@@ -47,3 +47,12 @@ plugins:
 
 include: [_pages]
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock", "package-lock.json", "assets/css/sass/"]
+
+
+# hexo mathjax
+math:
+  engine: 'mathjax' # or 'katex'
+  mathjax:
+    src: "//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"
+    config:
+      # MathJax config
